Updated NetisHR files

--- a/netishr/recruitment_recruitmentplanning.html
+++ b/netishr/recruitment_recruitmentplanning.html
@@ -25,7 +25,7 @@
 
     <div id="wrapper">
 
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -364,6 +364,9 @@
                     <ol class="breadcrumb">
                         <li>
                             <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            Recruitment
                         </li>
                         <li class="active">
                             <strong>Recruitment Planning</strong>
