--- a/netishr/recruitment_recruitmentplanning_new.html
+++ b/netishr/recruitment_recruitmentplanning_new.html
@@ -355,16 +355,19 @@
             </div>
             <div class="row wrapper border-bottom white-bg page-heading">
                 <div class="col-lg-10">
-                    <h2>Recruitment Detail</h2>
+                    <h2>New Recruitment</h2>
                     <ol class="breadcrumb">
                         <li>
                             <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="recruitmentplanning.html">Recruitment</a>
-                        </li>                        
+                            Recruitment
+                        </li>                     
+                        <li>
+                            <a href="recruitment_recruitmentplanning.html">Recruitment Planning</a>
+                        </li>                     
                         <li class="active">
-                            <strong>Recruitment Detail</strong>
+                            <strong>New Recruitment</strong>
                         </li>
                     </ol>
                 </div>
@@ -372,6 +375,9 @@
                 <div class="row">
                         <div class="ibox float-e-margins">
                             <div class="ibox-content">
+                                
+                                <button type="button" class="btn btn-white btn">Back</button>
+                                <button type="button" class="btn btn-primary btn">Save</button>
 								<fieldset class="form-horizontal">
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label">Job Title</label>
@@ -423,6 +429,9 @@
                                     </div>                                
                                 </div>
 								</fieldset>
+                                
+                                <button type="button" class="btn btn-white btn">Back</button>
+                                <button type="button" class="btn btn-primary btn">Save</button>
 							</div>
 						</div>
                     </div>
