--- a/netishr/recruitment_manpowerplanning.html
+++ b/netishr/recruitment_manpowerplanning.html
@@ -27,7 +27,7 @@
 
     <div id="wrapper">
 
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -366,6 +366,9 @@
                     <ol class="breadcrumb">
                         <li>
                             <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            Recruitment
                         </li>
                         <li class="active">
                             <strong>Manpower Planning</strong>
