Updated NetisHR files

--- a/netishr/index.html
+++ b/netishr/index.html
@@ -173,9 +173,9 @@
                     <li>
                         <a href="#"><i class="fa fa-user-md"></i><span class="nav-label">Career</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
-                            <li><a href="#">Individual Career Plan</a></li>
-                            <li><a href="#">Search Talent</a></li>
-                            <li><a href="#">Talent Pool</a></li>
+                            <li><a href="career_individualcareerplan.html">Individual Career Plan</a></li>
+                            <li><a href="career_searchtalent.html">Search Talent</a></li>
+                            <li><a href="career_talentpool.html">Talent Pool</a></li>
                             <li><a href="#">Talent Development Program</a></li>
                             <li><a href="#">Talent Readiness</a></li>
                             <li><a href="#">Transfer</a></li>
