--- a/netishr/persons_staffs.html
+++ b/netishr/persons_staffs.html
@@ -25,7 +25,7 @@
 
     <div id="wrapper">
 
-                <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -382,6 +382,30 @@
                     <div class="col-sm-8">
                         <div class="ibox">
                             <div class="ibox-content">
+
+                                <div class="row">
+                                    <div class="col-sm-4">
+                                        <div class="form-group">
+                                            <label class="control-label" for="status">Unit</label>
+                                            <select name="status" id="status" class="form-control">
+                                                <option value="0" selected>Any</option>
+                                                <option value="1">IT Team</option>
+                                                <option value="2">Marketing Communication</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <div class="form-group">
+                                            <label class="control-label" for="status">Job Title</label>
+                                            <select name="status" id="status" class="form-control">
+                                                <option value="0" selected>Any</option>
+                                                <option value="1">IT Developer</option>
+                                                <option value="2">Marketing Staff</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <div class="input-group">
                                     <input type="text" placeholder="Search staffs" class="input form-control">
                                     <span class="input-group-btn">
