--- a/netishr/competency_dictionary.html
+++ b/netishr/competency_dictionary.html
@@ -33,7 +33,7 @@
 
 <body>
     <div id="wrapper">
-                        <nav class="navbar-default navbar-static-side" role="navigation">
+        <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
@@ -432,6 +432,7 @@
                                                         </div>
                                                         <div class="modal-footer">
                                                             <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+                                                            <button type="button" class="btn btn-danger">Delete</button>
                                                             <button type="button" class="btn btn-primary">Save changes</button>
                                                         </div>
                                                     </div>
