Updated NetisHR files

--- a/netishr/career_talentpool.html
+++ b/netishr/career_talentpool.html
@@ -494,7 +494,7 @@
                                                         <tr>
                                                             <td class="client-avatar"><img alt="image" src="img/a3.jpg"> </td>
                                                             <td> 10022 </td>
-                                                            <td><a data-toggle="tab" href="#contact-1" class="client-link">Tini Kartini</a></td>
+                                                            <td><a data-toggle="tab" href="#contact-2" class="client-link">Tini Kartini</a></td>
                                                             <td> Marketing Communication</td>
                                                             <td> Staff</td>
                                                             <tr>
@@ -564,9 +564,88 @@
                                         </div>
 
                                         Talent Development Program:
-                                        <a href="persons_staffs_profile.html">
-                                            <button type="button" class="btn btn-primary btn-xs">Submit </button>
-                                        </a>
+
+                                        <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#submit">Submit</button>
+                                        <div class="modal inmodal" id="submit" tabindex="-1" role="dialog" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content animated">
+                                                    <div class="modal-header">
+                                                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                        <h4 class="modal-title">Confirmation</h4>
+                                                    </div>
+                                                    <div class="modal-body">Are you sure to submit this person to Talent Development Program?
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-white" data-dismiss="modal">Cancel</button>
+                                                        <button type="button" class="btn btn-primary">Submit</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="client-detail">
+                                            <div class="full-height-scroll">
+
+                                                <ul class="list-group clear-list">
+                                                    <li class="list-group-item fist-item">
+                                                        <span class="pull-right"> 90 </span> Performance score
+                                                    </li>
+                                                    <li class="list-group-item">
+                                                        <span class="pull-right"> 200</span> Potential score
+                                                    </li>
+                                                    <li class="list-group-item">
+                                                        <span class="pull-right"> 2 </span> Quadrant
+                                                    </li>
+                                                    <li class="list-group-item">
+                                                        <span class="pull-right"> System </span> Specified by
+                                                    </li>
+                                                </ul>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div id="contact-2" class="tab-pane">
+                                        <div class="row m-b-lg">
+                                            <div class="col-lg-4 text-center">
+
+                                                <h2>Tini Kartini</h2>
+
+                                                <div class="m-b-sm">
+                                                    <img alt="image" class="img-circle" src="img/a3.jpg" style="width: 62px">
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-8">
+                                                <h4>
+													NIP : 10033
+												</h4>
+                                                <h4>
+													Job Title : IT Developer
+												</h4>
+                                                <h4>
+													Organization Unit : IT Team
+												</h4>
+                                            </div>
+                                        </div>
+
+                                        Talent Development Program:
+                                        <button type="button" class="btn btn-xs" data-toggle="modal" data-target="#remove">Submited</button>
+                                        <div class="modal inmodal" id="remove" tabindex="-1" role="dialog" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content animated">
+                                                    <div class="modal-header">
+                                                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                                        <h4 class="modal-title">Confirmation</h4>
+                                                    </div>
+                                                    <div class="modal-body">Are you sure to remove this person from Talent Development Program?
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-white" data-dismiss="modal">Cancel</button>
+                                                        <button type="button" class="btn btn-primary">Remove</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
 
                                         <div class="client-detail">
                                             <div class="full-height-scroll">
